--- a/google-homepage.css
+++ b/google-homepage.css
@@ -2,7 +2,7 @@
 body
 {
     display: block;
-    font-size: 13pt;
+    font-size: 15pt;
     font-family: monospace;
     margin:auto;
 }
@@ -44,7 +44,7 @@ div > a
 #content > p
 {
     margin: auto;
-    width: 50%
+    width: 50%;
 }
 #SearchBox
 {
@@ -130,7 +130,8 @@ button:focus
 #TopNav
 {
     width: 100%;
-    padding: 10px;
+    margin: auto;
+    padding: 0px 5px 15px 5px;
     top:10px;
     left: 0px;
     position: absolute;
@@ -142,7 +143,8 @@ button:focus
     border-color: rgba(177, 168, 168, 0.54);
     border-width: thin;
     background-color: #f3f0f0;
-    padding: 10px 0px 10px 0px;
+    padding: 15px 5px 15px 5px;
+    margin: auto;
     left: 0px;
     bottom: 0px;
     position: absolute;
